--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,4 +6,7 @@
   .card_bg {
     @apply bg-slate-100 dark:bg-slate-700 border border-gray-300 dark:border-gray-700;
   }
+  .card_element_bg {
+    @apply bg-slate-200 dark:bg-slate-600 border border-gray-300 dark:border-gray-700;
+  }
 }
