--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .card_bg {
-    @apply bg-slate-100 dark:bg-slate-700 border border-gray-300 dark:border-gray-700;
+    @apply bg-slate-100 dark:bg-slate-700 border border-slate-200 dark:border-slate-800;
   }
 }
